Fixed hand on tablet view.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -131,6 +131,10 @@ $colors: (
                     background-image: url(../images/hand-appear-test.png);
                     background-attachment: fixed;
                     background-position-y: -50px;
+                    @include tablet{
+                        max-width: 50%;
+                        background-size: contain;
+                    }
                     @include desktop{
                         max-width: 45%;
                         background-position-y: -500px;
